# TPT

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
cuda/: bridges.hpp  device_data.hpp  forward_project.cu  forward_project.hpp  sart.cu  sart.hpp  sirt.cu  sirt.hpp  tomo_cuda.hpp
cuda/projectors/: closest.cu.hpp
distributed/: count_messages.cpp  distributed_reconstruction.cpp  overlaps.hpp  run_measurement.cpp  simple_distributed.cpp  sirt_test.cpp
doc/: astra_naming.txt  astra_pet_peeves.txt  geometry_specification.md  overview.md  profiling_results.md  todo.md
doc/doxygen/: Doxyfile  mainpage.md
examples/: column_action.cpp  cuda_reconstruction.cpp  dose_deposition.cpp  external_plotter.cpp  generate_comvol_table.cpp  generate_mtx.cpp  geometry_benchmark.cpp  minimal_example.cpp  partition.cpp  partitioning_tests.cpp  preview.cpp  read_geometry_test.cpp  read_legoscan_test.cpp  read_tiff.cpp  reconstruction.cpp  reserialize.cpp  serialize_partitioning.cpp  simple_distributed.cpp  svd_test.cpp  tests_berlin.cpp
include/: common.hpp  geometry.hpp  image.hpp  logging.hpp  math.hpp  operations.hpp  phantoms.hpp  projections.hpp  projector.hpp  sinogram.hpp  tomo.hpp  utilities.hpp  volume.hpp
include/algorithms/: art.hpp  sart.hpp  sirt.hpp
include/distributed/: dobject.hpp  forward_projection.hpp  partitioned_image.hpp  partitioned_projection_stack.hpp  partitioned_sinogram.hpp  partitioning_statistics.hpp  partitionings.hpp  plotter.hpp  recursive_bisectioning.hpp
include/geometries/: cone.hpp  dual_axis_parallel.hpp  dynamic_cone_beam.hpp  helical_cone_beam.hpp  laminography.hpp  list.hpp  parallel.hpp  tomosynthesis.hpp  trajectory.hpp
include/math/: basic_operations.hpp  constants.hpp  vector.hpp  vector_operations.hpp
include/projectors/: closest.hpp  joseph.hpp  linear.hpp
include/tomos/: common.hpp  geometry.hpp  image.hpp  logging.hpp  math.hpp  operations.hpp  phantoms.hpp  projections.hpp  projector.hpp  tomos.hpp  utilities.hpp  volume.hpp
include/tomos/algorithms/: art.hpp  cgls.hpp  column_action.hpp  sart.hpp  sirt.hpp
include/tomos/distributed/: forward_projection.hpp  overlaps.hpp  partitioned_image.hpp  partitioned_projection_stack.hpp  partitioning_statistics.hpp  plotter.hpp  recursive_bisectioning.hpp  restricted_geometry.hpp  trivial_partitioning.hpp
include/tomos/geometries/: cone.hpp  custom.hpp  dual_axis_parallel.hpp  fan.hpp  helical_cone_beam.hpp  laminography.hpp  list.hpp  parallel.hpp  tomosynthesis.hpp  trajectory.hpp
include/tomos/math/: basic_operations.hpp  constants.hpp  geometric.hpp  stringify.hpp  vector_operations.hpp
include/tomos/projectors/: closest.hpp  joseph.hpp  linear.hpp  siddon.hpp
include/tomos/util/: column_iterator.hpp  image_processing.hpp  matrix_sums.hpp  plotter.hpp  read_metadata.hpp  read_tiff.hpp  reconstruction_problem.hpp  reconstructor.hpp  report.hpp  simple_args.hpp  space_filling.hpp  svd.hpp  trees.hpp
include/tpt/: common.hpp  geometry.hpp  image.hpp  logging.hpp  math.hpp  operations.hpp  phantoms.hpp  projections.hpp  projector.hpp  tpt.hpp  utilities.hpp  volume.hpp
include/tpt/algorithms/: art.hpp  cgls.hpp  column_action.hpp  sart.hpp  sirt.hpp
include/tpt/distributed/: overlaps.hpp  partitioning_statistics.hpp  recursive_bisectioning.hpp  restricted_geometry.hpp  trivial_partitioning.hpp
include/tpt/distributed/grcb/: cube.hpp  datatypes.hpp  geometry.hpp  grcb.hpp  integration.hpp  load_balance.hpp  partitioning.hpp  plot.hpp
include/tpt/geometries/: cone.hpp  custom.hpp  dual_axis_parallel.hpp  dynamic_cone_beam.hpp  fan.hpp  helical_cone_beam.hpp  laminography.hpp  list.hpp  parallel.hpp  tomosynthesis.hpp  trajectory.hpp
include/tpt/math/: basic_operations.hpp  constants.hpp  geometric.hpp  stringify.hpp  vector.hpp  vector_operations.hpp
include/tpt/projectors/: closest.hpp  joseph.hpp  linear.hpp  siddon.hpp
include/tpt/util/: bench.hpp  column_iterator.hpp  image_processing.hpp  matrix_sums.hpp  plotter.hpp  read_metadata.hpp  read_tiff.hpp  reconstruction_problem.hpp  reconstructor.hpp  report.hpp  rescale.hpp  simple_args.hpp  space_filling.hpp  svd.hpp  trees.hpp
include/util/: bench.hpp  plotter.hpp  read_metadata.hpp  read_tiff.hpp  reconstructor.hpp  report.hpp  rescale.hpp  simple_args.hpp  tomo_args.hpp  trees.hpp
python/: CMakeLists.txt  algorithms.cpp  galactica_tests.ipynb  geometry.cpp  image.cpp  module.cpp  operations.cpp  pybind11  setup.py  tomo.py  vpython_tomo.py
python/examples/: astra_partition.py  minimum_example.py  partition.py  vpython_tomo.py
python/include/: python_common.hpp
python/src/: module.cpp
python/tomos/: __init__.py  util.py
python/tpt/: __init__.py  util.py
src/: phantoms.cpp
test/: geometry.cpp  initialization.cpp  math.cpp
tools/: count_messages.cpp  generate_comvol_table.cpp  grcb.cpp  overlap.cpp  partition.cpp  run_measurement.cpp  stats.cpp
